--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -78,11 +78,14 @@ jobs:
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
-    
+    if: github.ref == 'refs/heads/main
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+        run: |
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBECONFIG }}" | base64 -d > $HOME/.kube/config
+      - run: kubectl apply -f k8s-manifests/demo/ --validate=false
       - name: Update Kubernetes manifest
         run: |
           # Update image tag in deployment file
