--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline với Monitoring & Security
 
 on:
   push:
@@ -7,17 +7,110 @@ on:
 
 permissions:
   contents: write
+  security-events: write
+  actions: read
 
 env:
   HARBOR_URL: harbor.lmsx.io.vn
   HARBOR_PROJECT: demo
   IMAGE_NAME: nginx
+  PROMETHEUS_PUSHGATEWAY: http://prometheus-pushgateway.monitoring.svc.cluster.local:9091
+  GRAFANA_URL: http://grafana.monitoring.svc.cluster.local:3000
 
 jobs:
+  # Job 1: Testing
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Run unit tests
+        run: |
+          echo "Running unit tests..."
+          # Thêm lệnh test của bạn ở đây
+          # npm test hoặc pytest, go test, etc.
+          
+      - name: Run integration tests
+        run: |
+          echo "Running integration tests..."
+          # docker-compose -f docker-compose.test.yml up --abort-on-container-exit
+      
+      - name: Push test metrics to Prometheus
+        if: always()
+        run: |
+          cat <<EOF | curl --data-binary @- ${PROMETHEUS_PUSHGATEWAY}/metrics/job/cicd_tests/instance/${GITHUB_RUN_ID}
+          # HELP cicd_test_status Test execution status (1=success, 0=failure)
+          # TYPE cicd_test_status gauge
+          cicd_test_status{job="unit_tests",branch="${GITHUB_REF_NAME}",repo="${GITHUB_REPOSITORY}"} ${{ job.status == 'success' && '1' || '0' }}
+          # HELP cicd_test_duration_seconds Test execution duration
+          # TYPE cicd_test_duration_seconds gauge
+          cicd_test_duration_seconds{job="unit_tests"} $(echo $SECONDS)
+          EOF
+
+  # Job 2: Security Scanning với Trivy
+  security-scan:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Build image for scanning
+        run: |
+          docker build -t scan-image:latest .
+      
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'scan-image:latest'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+      
+      - name: Upload Trivy results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
+      
+      - name: Run Trivy for JSON output
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'scan-image:latest'
+          format: 'json'
+          output: 'trivy-results.json'
+      
+      - name: Parse and push security metrics
+        if: always()
+        run: |
+          CRITICAL=$(cat trivy-results.json | jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length')
+          HIGH=$(cat trivy-results.json | jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="HIGH")] | length')
+          MEDIUM=$(cat trivy-results.json | jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="MEDIUM")] | length')
+          
+          cat <<EOF | curl --data-binary @- ${PROMETHEUS_PUSHGATEWAY}/metrics/job/cicd_security/instance/${GITHUB_RUN_ID}
+          # HELP cicd_vulnerabilities_total Total vulnerabilities found
+          # TYPE cicd_vulnerabilities_total gauge
+          cicd_vulnerabilities_total{severity="critical",image="${IMAGE_NAME}"} ${CRITICAL}
+          cicd_vulnerabilities_total{severity="high",image="${IMAGE_NAME}"} ${HIGH}
+          cicd_vulnerabilities_total{severity="medium",image="${IMAGE_NAME}"} ${MEDIUM}
+          EOF
+      
+      - name: Check vulnerability threshold
+        run: |
+          CRITICAL=$(cat trivy-results.json | jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length')
+          if [ "$CRITICAL" -gt 0 ]; then
+            echo "❌ Found $CRITICAL CRITICAL vulnerabilities. Blocking deployment."
+            exit 1
+          fi
+
+  # Job 3: Build and Push
   build-and-push:
     runs-on: ubuntu-latest
+    needs: [test, security-scan]
     outputs:
       image-tag: ${{ steps.image-tag.outputs.tag }}
+      previous-tag: ${{ steps.backup.outputs.previous_tag }}
     
     steps:
       - name: Checkout code
@@ -25,6 +118,22 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
+      
+      - name: Backup current deployment
+        id: backup
+        run: |
+          # Lấy image tag hiện tại từ deployment
+          CURRENT_IMAGE=$(grep "image:" k8s-manifests/demo/deployment.yaml | head -1 | awk '{print $2}')
+          PREVIOUS_TAG=$(echo $CURRENT_IMAGE | cut -d: -f2)
+          echo "previous_tag=$PREVIOUS_TAG" >> $GITHUB_OUTPUT
+          
+          # Backup deployment file
+          mkdir -p backups
+          BACKUP_FILE="backups/deployment-$(date +%Y%m%d-%H%M%S)-${PREVIOUS_TAG}.yaml"
+          cp k8s-manifests/demo/deployment.yaml $BACKUP_FILE
+          
+          echo "✅ Backed up current deployment with tag: $PREVIOUS_TAG"
+          echo "Backup file: $BACKUP_FILE"
       
       - name: Set image tag
         id: image-tag
@@ -50,7 +159,11 @@ jobs:
       
       - name: Build image
         run: |
+          START_TIME=$(date +%s)
           docker build -t local-image:latest .
+          END_TIME=$(date +%s)
+          BUILD_DURATION=$((END_TIME - START_TIME))
+          echo "BUILD_DURATION=$BUILD_DURATION" >> $GITHUB_ENV
       
       - name: Push with skopeo
         env:
@@ -71,6 +184,21 @@ jobs:
           
           echo "✅ Images pushed successfully!"
       
+      - name: Push build metrics to Prometheus
+        if: always()
+        run: |
+          cat <<EOF | curl --data-binary @- ${PROMETHEUS_PUSHGATEWAY}/metrics/job/cicd_build/instance/${GITHUB_RUN_ID}
+          # HELP cicd_build_status Build status (1=success, 0=failure)
+          # TYPE cicd_build_status gauge
+          cicd_build_status{image="${IMAGE_NAME}",tag="${{ steps.image-tag.outputs.tag }}",branch="${GITHUB_REF_NAME}"} ${{ job.status == 'success' && '1' || '0' }}
+          # HELP cicd_build_duration_seconds Build duration in seconds
+          # TYPE cicd_build_duration_seconds gauge
+          cicd_build_duration_seconds{image="${IMAGE_NAME}"} ${BUILD_DURATION}
+          # HELP cicd_build_timestamp_seconds Build timestamp
+          # TYPE cicd_build_timestamp_seconds gauge
+          cicd_build_timestamp_seconds{image="${IMAGE_NAME}",tag="${{ steps.image-tag.outputs.tag }}"} $(date +%s)
+          EOF
+      
       - name: Update Kubernetes manifests
         run: |
           IMAGE_TAG="${{ steps.image-tag.outputs.tag }}"
@@ -78,7 +206,6 @@ jobs:
           
           echo "Updating deployment.yaml with image: $IMAGE_FULL"
           
-          # Update image in deployment.yaml
           sed -i "s|image: harbor.lmsx.io.vn/demo/nginx:.*|image: $IMAGE_FULL|g" k8s-manifests/demo/deployment.yaml
           
           echo "✅ Updated deployment.yaml:"
@@ -89,10 +216,8 @@ jobs:
           git config user.name "GitHub Actions Bot"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          # Add only the deployment file
           git add k8s-manifests/demo/deployment.yaml
           
-          # Check if there are changes
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
@@ -101,14 +226,186 @@ jobs:
             echo "✅ Manifests updated and pushed to repository"
           fi
       
-      - name: Verify images
+      - name: Upload backup artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: deployment-backup-${{ steps.image-tag.outputs.tag }}
+          path: backups/
+          retention-days: 30
+      
+      - name: Create deployment summary
         run: |
-          echo "### 🐳 Pushed Images" >> $GITHUB_STEP_SUMMARY
+          echo "### 🚀 Deployment Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          echo "#### 🐳 Pushed Images" >> $GITHUB_STEP_SUMMARY
           echo "- \`${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ steps.image-tag.outputs.tag }}\`" >> $GITHUB_STEP_SUMMARY
           echo "- \`${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📝 Manifest Update" >> $GITHUB_STEP_SUMMARY
+          echo "#### 📝 Manifest Update" >> $GITHUB_STEP_SUMMARY
           echo "Updated \`k8s-manifests/demo/deployment.yaml\` with new image tag" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          echo "#### 💾 Backup" >> $GITHUB_STEP_SUMMARY
+          echo "Previous version: \`${{ steps.backup.outputs.previous_tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "#### ⏱️ Timing" >> $GITHUB_STEP_SUMMARY
+          echo "Build duration: ${BUILD_DURATION}s" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "#### 🔄 ArgoCD Sync" >> $GITHUB_STEP_SUMMARY
           echo "ArgoCD will automatically sync the changes within 3 minutes" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "#### 📊 Monitoring" >> $GITHUB_STEP_SUMMARY
+          echo "- [View in Grafana](${GRAFANA_URL}/d/cicd-pipeline)" >> $GITHUB_STEP_SUMMARY
+          echo "- [View Prometheus Metrics](${PROMETHEUS_PUSHGATEWAY})" >> $GITHUB_STEP_SUMMARY
+
+  # Job 4: Generate SLO Metrics với Sloth
+  slo-metrics:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Sloth
+        run: |
+          wget https://github.com/slok/sloth/releases/download/v0.11.0/sloth-linux-amd64
+          chmod +x sloth-linux-amd64
+          sudo mv sloth-linux-amd64 /usr/local/bin/sloth
+      
+      - name: Create SLO specification
+        run: |
+          cat > slo-spec.yaml <<EOF
+          version: "prometheus/v1"
+          service: "${IMAGE_NAME}"
+          labels:
+            team: "devops"
+            tier: "1"
+          slos:
+            - name: "deployment-success-rate"
+              objective: 99.9
+              description: "Deployment success rate should be above 99.9%"
+              sli:
+                events:
+                  error_query: sum(rate(cicd_build_status{image="${IMAGE_NAME}",status="0"}[5m]))
+                  total_query: sum(rate(cicd_build_status{image="${IMAGE_NAME}"}[5m]))
+              alerting:
+                name: DeploymentSuccessRate
+                labels:
+                  category: "availability"
+                annotations:
+                  summary: "Deployment success rate is below 99.9%"
+                page_alert:
+                  labels:
+                    severity: "critical"
+                ticket_alert:
+                  labels:
+                    severity: "warning"
+            - name: "build-duration"
+              objective: 95
+              description: "95% of builds should complete within 5 minutes"
+              sli:
+                events:
+                  error_query: sum(rate(cicd_build_duration_seconds{image="${IMAGE_NAME}"}[5m]) > 300)
+                  total_query: sum(rate(cicd_build_duration_seconds{image="${IMAGE_NAME}"}[5m]))
+              alerting:
+                name: BuildDuration
+                labels:
+                  category: "performance"
+          EOF
+      
+      - name: Generate Prometheus rules
+        run: |
+          sloth generate -i slo-spec.yaml -o prometheus-slo-rules.yaml
+          echo "✅ Generated SLO rules"
+          cat prometheus-slo-rules.yaml
+      
+      - name: Push SLO generation metrics
+        run: |
+          cat <<EOF | curl --data-binary @- ${PROMETHEUS_PUSHGATEWAY}/metrics/job/cicd_slo/instance/${GITHUB_RUN_ID}
+          # HELP cicd_slo_generated SLO rules generation status
+          # TYPE cicd_slo_generated gauge
+          cicd_slo_generated{service="${IMAGE_NAME}"} 1
+          EOF
+
+  # Job 5: Post-deployment verification
+  verify-deployment:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: always()
+    steps:
+      - name: Wait for ArgoCD sync
+        run: |
+          echo "Waiting 3 minutes for ArgoCD to sync..."
+          sleep 180
+      
+      - name: Check deployment status
+        run: |
+          # Giả sử bạn có kubectl configured hoặc sử dụng ArgoCD API
+          echo "Checking deployment status..."
+          # kubectl rollout status deployment/${IMAGE_NAME} -n demo
+          # hoặc dùng ArgoCD CLI/API
+      
+      - name: Push deployment metrics
+        if: always()
+        run: |
+          cat <<EOF | curl --data-binary @- ${PROMETHEUS_PUSHGATEWAY}/metrics/job/cicd_deployment/instance/${GITHUB_RUN_ID}
+          # HELP cicd_deployment_status Deployment status (1=success, 0=failure)
+          # TYPE cicd_deployment_status gauge
+          cicd_deployment_status{image="${IMAGE_NAME}",tag="${{ needs.build-and-push.outputs.image-tag }}",environment="production"} ${{ job.status == 'success' && '1' || '0' }}
+          # HELP cicd_deployment_timestamp_seconds Deployment timestamp
+          # TYPE cicd_deployment_timestamp_seconds gauge
+          cicd_deployment_timestamp_seconds{image="${IMAGE_NAME}"} $(date +%s)
+          EOF
+
+  # Job 6: Rollback (chỉ chạy khi manual trigger)
+  rollback:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+      
+      - name: Download backup
+        uses: actions/download-artifact@v4
+        with:
+          name: deployment-backup-${{ github.event.inputs.rollback_tag }}
+          path: backups/
+      
+      - name: Rollback to previous version
+        run: |
+          echo "Rolling back to previous version..."
+          
+          # Lấy tag trước đó từ git history
+          PREVIOUS_COMMIT=$(git log --grep="Update image to" -n 2 --pretty=format:"%H" | tail -1)
+          git checkout $PREVIOUS_COMMIT -- k8s-manifests/demo/deployment.yaml
+          
+          echo "✅ Rolled back deployment.yaml"
+          grep "image:" k8s-manifests/demo/deployment.yaml
+      
+      - name: Commit rollback
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          git add k8s-manifests/demo/deployment.yaml
+          git commit -m "⏮️ Rollback deployment [skip ci]"
+          git push
+          
+          echo "✅ Rollback completed"
+      
+      - name: Push rollback metrics
+        run: |
+          cat <<EOF | curl --data-binary @- ${PROMETHEUS_PUSHGATEWAY}/metrics/job/cicd_rollback/instance/${GITHUB_RUN_ID}
+          # HELP cicd_rollback_total Total number of rollbacks
+          # TYPE cicd_rollback_total counter
+          cicd_rollback_total{image="${IMAGE_NAME}",reason="manual"} 1
+          EOF
+      
+      - name: Notify rollback
+        run: |
+          echo "### ⏮️ Rollback Completed" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Deployment has been rolled back to previous version" >> $GITHUB_STEP_SUMMARY
+          echo "ArgoCD will sync the changes automatically" >> $GITHUB_STEP_SUMMARY
